# ros-pvrcnn

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
action/: detector3d.action
config/: my_kitti_dataset.yaml  pv_rcnn.yaml
config/ironpile/: stone_kitti_dataset.yaml  stone_pv_rcnn.yaml
config/person_truck/: person_truck_kitti_dataset.yaml  person_truck_pv_rcnn.yaml
msg/: box3d.msg
output/log/: log_20210514-134006.txt  log_20210514-135425.txt  log_20210514-135515.txt  log_20210514-135903.txt  log_20210514-140013.txt  log_20210514-140032.txt  log_20210514-140048.txt  log_20210514-140112.txt  log_20210514-140145.txt  log_20210514-140217.txt  log_20210514-140322.txt  log_20210514-140341.txt  log_20210514-140417.txt  log_20210514-141143.txt  log_20210514-141246.txt  log_20210514-141332.txt  log_20210514-141450.txt  log_20210514-141848.txt  log_20210514-141854.txt  log_20210514-141936.txt  log_20210514-142013.txt  log_20210514-142044.txt  log_20210514-142355.txt  log_20210514-142407.txt  log_20210514-142419.txt  log_20210514-142655.txt  log_20210514-143829.txt
src/: OpenPCDet  pvrcnn_ros_bridge.py  pvrcnn_ros_server.py
