<?xml version="1.0"?>
<package format="2">
    <name>ros_pvrcnn</name>
    <version>0.0.0</version>
    <description>The ros_pvrcnn package</description>
    <maintainer email="706545330@qq.com">ou</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <depend>rospy</depend>

    <depend>message_generation</depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>actionlib_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <export/>
</package>
